--- a/traefik_stack5/www/who1/html/index.html
+++ b/traefik_stack5/www/who1/html/index.html
@@ -7,48 +7,48 @@
 <html>
 
 <head>
-	<title>container: who1</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+    <title>container: who1</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body>
 
-	<!-- Wrapper -->
-	<div id="wrapper" class="divided">
+    <!-- Wrapper -->
+    <div id="wrapper" class="divided">
 
-		<!-- One -->
-		<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-			<div class="content">
-				<h1>Service name: who1</h1>
-				<p class="major">Your Traefik stack is working well. If you enjoy this, just to star the <a href="https://github.com/pascalandy/docker-stack-this">git repo</a>.</p>
-				
-			</div>
-			<div class="image">
-				<img src="images/banner.jpg" alt="" />
-			</div>
-		</section>
+        <!-- One -->
+        <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+            <div class="content">
+                <h1>Service name: who1 (nginx)</h1>
+                <p class="major">Your Traefik stack is working well. If you enjoy this, just to star the <a href="https://github.com/pascalandy/docker-stack-this">git repo</a>.</p>
 
-		<!-- Footer -->
-		<footer class="wrapper style1 align-center">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-				</ul>
-				<p>&copy; The magic behind the curtains is made by the folks at <a href="http://firepress.org">FirePress</a>.</p>
-			</div>
-		</footer>
+            </div>
+            <div class="image">
+                <img src="images/banner.jpg" alt="" />
+            </div>
+        </section>
 
-	</div>
+        <!-- Footer -->
+        <footer class="wrapper style1 align-center">
+            <div class="inner">
+                <ul class="icons">
+                    <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                </ul>
+                <p>&copy; The magic behind the curtains is made by the folks at <a href="http://firepress.org">FirePress</a>.</p>
+            </div>
+        </footer>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
